src/main/default/objects/Status_Workflow__c/Status_Workflow__c.object-meta.xml
<CustomObject>
    <label>Status Workflow</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Status Workflow Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Status Workflows</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>