src/main/default/objects/Status_Workflow__c/fields/Application__c.field-meta.xml
<CustomField>
    <fullName>Application__c</fullName>
    <inlineHelpText>Application where the transition between statuses in the status workflow occurs.</inlineHelpText>
    <label>Application</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Console</fullName>
                <default>true</default>
                <label>Console</label>
            </value>
            <value>
                <fullName>Mobile</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>