src/main/default/objects/Status_Workflow__c/fields/CheckList_Required__c.field-meta.xml
<CustomField>
    <fullName>CheckList_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates that all of the required checklist steps must be completed before making this workflow transition.</description>
    <inlineHelpText>(Ticket workflows only) If selected, users must complete the ticket checklist before the transition can occur.</inlineHelpText>
    <label>CheckList Required</label>
    <type>Checkbox</type>
</CustomField>