src/main/default/objects/Status_Workflow__c/fields/Command_Text__c.field-meta.xml
<CustomField>
    <fullName>Command_Text__c</fullName>
    <description>This text will be the button label for making this transition.</description>
    <inlineHelpText>Label that displays on the button users can select to transition a job/ticket to the final status in the workflow.</inlineHelpText>
    <label>Command Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>