src/main/default/objects/Status_Workflow__c/fields/Confirmation_Text__c.field-meta.xml
<CustomField>
    <fullName>Confirmation_Text__c</fullName>
    <inlineHelpText>Message that displays when users select the button to transition a job/ticket to the final status in the workflow.</inlineHelpText>
    <label>Confirmation Text</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>