src/main/default/objects/Status_Workflow__c/fields/Help_Text__c.field-meta.xml
<CustomField>
    <fullName>Help_Text__c</fullName>
    <inlineHelpText>Tooltip that displays when users move the mouse over the button to transition a job to the final status in the workflow.</inlineHelpText>
    <label>Help Text</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>