src/main/default/objects/Status_Workflow__c/fields/New_Status__c.field-meta.xml
<CustomField>
    <fullName>New_Status__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <inlineHelpText>Final status in the workflow.</inlineHelpText>
    <label>New Status</label>
    <referenceTo>Status__c</referenceTo>
    <relationshipLabel>Status Workflows (New Status)</relationshipLabel>
    <relationshipName>Transitions_To</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>