src/main/default/objects/Status_Workflow__c/fields/Old_Status__c.field-meta.xml
<CustomField>
    <fullName>Old_Status__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <inlineHelpText>Initial status in the workflow.</inlineHelpText>
    <label>Old Status</label>
    <referenceTo>Status__c</referenceTo>
    <relationshipLabel>Status Workflows</relationshipLabel>
    <relationshipName>Transitions_From</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>