src/main/default/objects/Status_Workflow__c/fields/Sequence_Number__c.field-meta.xml
<CustomField>
    <fullName>Sequence_Number__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Number used to determine the order in which the "New Status" displays in Status fields. Status fields sort statuses by the sequence number of their status workflow and then by status name.</inlineHelpText>
    <label>Sequence Number</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>