src/main/default/objects/Status_Workflow__c/fields/Signature_Required__c.field-meta.xml
<CustomField>
    <fullName>Signature_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>(Ticket workflows only) If selected, the field employee and/or customer representative must add a digital signature to a ticket report before the transition can occur.</inlineHelpText>
    <label>Signature Required</label>
    <type>Checkbox</type>
</CustomField>