src/main/default/objects/Status_Workflow__c/fields/SObject__c.field-meta.xml
<CustomField>
    <fullName>SObject__c</fullName>
    <inlineHelpText>Object for which the workflow is used. You must make an entry in this field.</inlineHelpText>
    <label>SObject</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Job__c</fullName>
            </value>
            <value>
                <fullName>Ticket__c</fullName>
            </value>
            <value>
                <fullName>Quote__c</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>