src/main/default/objects/Status_Workflow__c/fields/SObject_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>SObject_Record_Type__c</fullName>
    <inlineHelpText>Record type for which the workflow is used.</inlineHelpText>
    <label>SObject Record Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>SObject__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Service</fullName>
            </value>
            <value>
                <fullName>Field_Ticket</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>