src/main/default/objects/Status_Workflow__c/fields/Status_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Status_Record_Type__c</fullName>
    <formula>TEXT(New_Status__r.SObject_Record_Type__c)</formula>
    <inlineHelpText>Record type for which the workflow is used.</inlineHelpText>
    <label>Status Record Type</label>
    <type>Text</type>
</CustomField>