src/main/default/objects/Status_Workflow__c/fields/Status_Type__c.field-meta.xml
<CustomField>
    <fullName>Status_Type__c</fullName>
    <formula>New_Status__r.RecordType.DeveloperName</formula>
    <inlineHelpText>Object for which the workflow is used.</inlineHelpText>
    <label>Status Type</label>
    <type>Text</type>
</CustomField>